# SUST_Codex_2026

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
api/: Cargo.toml  Dockerfile
api/src/: config.rs  handlers.rs  investigator.rs  main.rs  models.rs
web/: .cta.json  Dockerfile  biome.json  package.json
web/public/: manifest.json
web/src/: styles.css
web/src/components/: Header.tsx
web/src/routes/: __root.tsx  index.tsx
