[package]
name = "sust_codex_2026"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["multipart"] }
chrono = { version = "0.4.39", features = ["serde"] }
redis = { version = "1.2.4", features = ["aio", "tokio-comp"] }
redis-work-queue = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["timeout", "util"] }
tower-http = { version = "0.7.0", features = ["cors", "trace", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
aws-config = { version = "1.5.15", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.74.0"
dotenvy = "0.15.7"
rig = "0.39.0"
